--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <html>
    <body>
       <p>Radio check. Pilot, please confirm.</p>
+      <p>Radio over, Control, I am here and somewhat confused but let's go</p>
    </body>
 </html> 
